fix z-index custom-go-top

--- a/css/components/footer/footer.css
+++ b/css/components/footer/footer.css
@@ -10,9 +10,6 @@
     width: 100%;
     height: 50px;
     transition: 0.3s;
-}
-
-.go__top a {
     color: #fff;
     font-size: 13px;
 }
